src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseTTL -> Line                            (0)
	Line -> Query save_to graph_name                   (1)
	Line -> evaluate Operation save_to file_name       (2)
	Query -> CombineQuery                              (3)
	Query -> AddQuery                                  (4)
	Query -> ReplaceQuery                              (5)
	Query -> ConstructQuery                            (6)
	Query -> DeleteQuery                               (7)
	SelectQuery -> select_from graph_name              (8)
	SelectQuery -> select_from graph_name where FilterStart   (9)
	SelectQuery -> SelectElementQuery                  (10)
	SelectEmptyQuery -> select_from graph_name         (11)
	SelectEmptyQuery -> select_from graph_name where FilterStart   (12)
	SelectElementQuery -> select Element from graph_name where FilterStart   (13)
	SelectElementQuery -> literal                      (14)
	Element -> subject                                 (15)
	Element -> predicate                               (16)
	Element -> object                                  (17)
	SelectObjectQuery -> select_object from graph_name where FilterStart   (18)
	CombineQuery -> combine CombineQuery SelectQuery   (19)
	CombineQuery -> SelectQuery                        (20)
	AddQuery -> add branch to graph_name               (21)
	ReplaceQuery -> in graph_name replace SelectEmptyQuery with element   (22)
	ReplaceQuery -> in graph_name replace SelectEmptyQuery with SelectObjectQuery   (23)
	ConstructQuery -> construct graph_name             (24)
	DeleteQuery -> delete graph_name                   (25)
	DeleteQuery -> delete graph_name where FilterStart   (26)
	Operation -> ArithmeticOperation                   (27)
	Operation -> ComparisonOperation                   (28)
	Operation -> GraphOperation                        (29)
	ArithmeticOperation -> arith_operand SelectElementQuery SelectElementQuery   (30)
	ComparisonOperation -> comp_operand SelectElementQuery SelectElementQuery   (31)
	GraphOperation -> union SelectElementQuery SelectElementQuery   (32)
	GraphOperation -> intersection SelectElementQuery SelectElementQuery   (33)
	GraphOperation -> difference SelectElementQuery SelectElementQuery   (34)
	GraphOperation -> GraphOperationSingle             (35)
	GraphOperationSingle -> min SelectElementQuery     (36)
	GraphOperationSingle -> max SelectElementQuery     (37)
	FilterStart -> start Filter and start FilterFinal   (38)
	FilterStart -> start Filter or start FilterFinal   (39)
	FilterStart -> not Filter                          (40)
	Filter -> Filter and FilterFinal                   (41)
	Filter -> Filter or FilterFinal                    (42)
	Filter -> not Filter                               (43)
	Filter -> ComparisonOperation                      (44)
	FilterFinal -> ComparisonOperation                 (45)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	select_from    { TokenSelectFrom _ }
	select         { TokenSelect _ }
	where          { TokenWhere _ }
	select_object  { TokenSelectObject _ }
	from           { TokenFrom _ }
	combine        { TokenCombine _ }
	add            { TokenAdd _ }
	to             { TokenTo _ }
	in             { TokenIn _ }
	and            { TokenAnd _ }
	or             { TokenOr _ }
	not            { TokenNot _ }
	replace        { TokenReplace _ }
	with           { TokenWith _ }
	construct      { TokenConstruct _ }
	delete         { TokenDelete _ }
	start          { TokenStart _ }
	evaluate       { TokenEvaluate _ }
	union          { TokenUnion _ }
	intersection   { TokenIntersection _ }
	difference     { TokenDifference _ }
	min            { TokenMin _ }
	max            { TokenMax _ }
	subject        { TokenSubjectElement _ }
	predicate      { TokenPredicateElement _ }
	object         { TokenObjectElement _ }
	branch         { TokenBranch _ $$ }
	graph_name     { TokenGraphName _ $$ }
	file_name      { TokenFileName _ $$ }
	element        { TokenElement _ $$ }
	arith_operand  { TokenArithOperator _ $$ }
	comp_operand   { TokenCompOperator _ $$ }
	save_to        { TokenSaveTo _ $$ }
	literal        { TokenLiteral _ $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseTTL rule  0
	Line            rules 1, 2
	Query           rules 3, 4, 5, 6, 7
	SelectQuery     rules 8, 9, 10
	SelectEmptyQuery rules 11, 12
	SelectElementQuery rules 13, 14
	Element         rules 15, 16, 17
	SelectObjectQuery rule  18
	CombineQuery    rules 19, 20
	AddQuery        rule  21
	ReplaceQuery    rules 22, 23
	ConstructQuery  rule  24
	DeleteQuery     rules 25, 26
	Operation       rules 27, 28, 29
	ArithmeticOperation rule  30
	ComparisonOperation rule  31
	GraphOperation  rules 32, 33, 34, 35
	GraphOperationSingle rules 36, 37
	FilterStart     rules 38, 39, 40
	Filter          rules 41, 42, 43, 44
	FilterFinal     rule  45

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseTTL -> . Line                           (rule 0)

	select_from    shift, and enter state 10
	select         shift, and enter state 11
	combine        shift, and enter state 12
	add            shift, and enter state 13
	in             shift, and enter state 14
	construct      shift, and enter state 15
	delete         shift, and enter state 16
	evaluate       shift, and enter state 19
	literal        shift, and enter state 17

	Line           goto state 18
	Query          goto state 2
	SelectQuery    goto state 3
	SelectElementQuerygoto state 4
	CombineQuery   goto state 5
	AddQuery       goto state 6
	ReplaceQuery   goto state 7
	ConstructQuery goto state 8
	DeleteQuery    goto state 9

State 1

	Line -> . Query save_to graph_name                  (rule 1)

	select_from    shift, and enter state 10
	select         shift, and enter state 11
	combine        shift, and enter state 12
	add            shift, and enter state 13
	in             shift, and enter state 14
	construct      shift, and enter state 15
	delete         shift, and enter state 16
	literal        shift, and enter state 17

	Query          goto state 2
	SelectQuery    goto state 3
	SelectElementQuerygoto state 4
	CombineQuery   goto state 5
	AddQuery       goto state 6
	ReplaceQuery   goto state 7
	ConstructQuery goto state 8
	DeleteQuery    goto state 9

State 2

	Line -> Query . save_to graph_name                  (rule 1)

	save_to        shift, and enter state 42


State 3

	CombineQuery -> SelectQuery .                       (rule 20)

	select_from    reduce using rule 20
	select         reduce using rule 20
	save_to        reduce using rule 20
	literal        reduce using rule 20


State 4

	SelectQuery -> SelectElementQuery .                 (rule 10)

	select_from    reduce using rule 10
	select         reduce using rule 10
	save_to        reduce using rule 10
	literal        reduce using rule 10


State 5

	Query -> CombineQuery .                             (rule 3)

	save_to        reduce using rule 3


State 6

	Query -> AddQuery .                                 (rule 4)

	save_to        reduce using rule 4


State 7

	Query -> ReplaceQuery .                             (rule 5)

	save_to        reduce using rule 5


State 8

	Query -> ConstructQuery .                           (rule 6)

	save_to        reduce using rule 6


State 9

	Query -> DeleteQuery .                              (rule 7)

	save_to        reduce using rule 7


State 10

	SelectQuery -> select_from . graph_name             (rule 8)
	SelectQuery -> select_from . graph_name where FilterStart    (rule 9)

	graph_name     shift, and enter state 41


State 11

	SelectElementQuery -> select . Element from graph_name where FilterStart    (rule 13)

	subject        shift, and enter state 38
	predicate      shift, and enter state 39
	object         shift, and enter state 40

	Element        goto state 37

State 12

	CombineQuery -> combine . CombineQuery SelectQuery    (rule 19)

	select_from    shift, and enter state 10
	select         shift, and enter state 11
	combine        shift, and enter state 12
	literal        shift, and enter state 17

	SelectQuery    goto state 3
	SelectElementQuerygoto state 4
	CombineQuery   goto state 36

State 13

	AddQuery -> add . branch to graph_name              (rule 21)

	branch         shift, and enter state 35


State 14

	ReplaceQuery -> in . graph_name replace SelectEmptyQuery with element    (rule 22)
	ReplaceQuery -> in . graph_name replace SelectEmptyQuery with SelectObjectQuery    (rule 23)

	graph_name     shift, and enter state 34


State 15

	ConstructQuery -> construct . graph_name            (rule 24)

	graph_name     shift, and enter state 33


State 16

	DeleteQuery -> delete . graph_name                  (rule 25)
	DeleteQuery -> delete . graph_name where FilterStart    (rule 26)

	graph_name     shift, and enter state 32


State 17

	SelectElementQuery -> literal .                     (rule 14)

	select_from    reduce using rule 14
	select         reduce using rule 14
	and            reduce using rule 14
	or             reduce using rule 14
	with           reduce using rule 14
	save_to        reduce using rule 14
	literal        reduce using rule 14


State 18

	%start_parseTTL -> Line .                           (rule 0)

	%eof           accept


State 19

	Line -> evaluate . Operation save_to file_name      (rule 2)

	union          shift, and enter state 25
	intersection   shift, and enter state 26
	difference     shift, and enter state 27
	min            shift, and enter state 28
	max            shift, and enter state 29
	arith_operand  shift, and enter state 30
	comp_operand   shift, and enter state 31

	Operation      goto state 20
	ArithmeticOperationgoto state 21
	ComparisonOperationgoto state 22
	GraphOperation goto state 23
	GraphOperationSinglegoto state 24

State 20

	Line -> evaluate Operation . save_to file_name      (rule 2)

	save_to        shift, and enter state 57


State 21

	Operation -> ArithmeticOperation .                  (rule 27)

	save_to        reduce using rule 27


State 22

	Operation -> ComparisonOperation .                  (rule 28)

	save_to        reduce using rule 28


State 23

	Operation -> GraphOperation .                       (rule 29)

	save_to        reduce using rule 29


State 24

	GraphOperation -> GraphOperationSingle .            (rule 35)

	save_to        reduce using rule 35


State 25

	GraphOperation -> union . SelectElementQuery SelectElementQuery    (rule 32)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 56

State 26

	GraphOperation -> intersection . SelectElementQuery SelectElementQuery    (rule 33)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 55

State 27

	GraphOperation -> difference . SelectElementQuery SelectElementQuery    (rule 34)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 54

State 28

	GraphOperationSingle -> min . SelectElementQuery    (rule 36)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 53

State 29

	GraphOperationSingle -> max . SelectElementQuery    (rule 37)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 52

State 30

	ArithmeticOperation -> arith_operand . SelectElementQuery SelectElementQuery    (rule 30)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 51

State 31

	ComparisonOperation -> comp_operand . SelectElementQuery SelectElementQuery    (rule 31)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 50

State 32

	DeleteQuery -> delete graph_name .                  (rule 25)
	DeleteQuery -> delete graph_name . where FilterStart    (rule 26)

	where          shift, and enter state 49
	save_to        reduce using rule 25


State 33

	ConstructQuery -> construct graph_name .            (rule 24)

	save_to        reduce using rule 24


State 34

	ReplaceQuery -> in graph_name . replace SelectEmptyQuery with element    (rule 22)
	ReplaceQuery -> in graph_name . replace SelectEmptyQuery with SelectObjectQuery    (rule 23)

	replace        shift, and enter state 48


State 35

	AddQuery -> add branch . to graph_name              (rule 21)

	to             shift, and enter state 47


State 36

	CombineQuery -> combine CombineQuery . SelectQuery    (rule 19)

	select_from    shift, and enter state 10
	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectQuery    goto state 46
	SelectElementQuerygoto state 4

State 37

	SelectElementQuery -> select Element . from graph_name where FilterStart    (rule 13)

	from           shift, and enter state 45


State 38

	Element -> subject .                                (rule 15)

	from           reduce using rule 15


State 39

	Element -> predicate .                              (rule 16)

	from           reduce using rule 16


State 40

	Element -> object .                                 (rule 17)

	from           reduce using rule 17


State 41

	SelectQuery -> select_from graph_name .             (rule 8)
	SelectQuery -> select_from graph_name . where FilterStart    (rule 9)

	select_from    reduce using rule 8
	select         reduce using rule 8
	where          shift, and enter state 44
	save_to        reduce using rule 8
	literal        reduce using rule 8


State 42

	Line -> Query save_to . graph_name                  (rule 1)

	graph_name     shift, and enter state 43


State 43

	Line -> Query save_to graph_name .                  (rule 1)

	%eof           reduce using rule 1


State 44

	SelectQuery -> select_from graph_name where . FilterStart    (rule 9)

	not            shift, and enter state 65
	start          shift, and enter state 66

	FilterStart    goto state 71

State 45

	SelectElementQuery -> select Element from . graph_name where FilterStart    (rule 13)

	graph_name     shift, and enter state 70


State 46

	CombineQuery -> combine CombineQuery SelectQuery .    (rule 19)

	select_from    reduce using rule 19
	select         reduce using rule 19
	save_to        reduce using rule 19
	literal        reduce using rule 19


State 47

	AddQuery -> add branch to . graph_name              (rule 21)

	graph_name     shift, and enter state 69


State 48

	ReplaceQuery -> in graph_name replace . SelectEmptyQuery with element    (rule 22)
	ReplaceQuery -> in graph_name replace . SelectEmptyQuery with SelectObjectQuery    (rule 23)

	select_from    shift, and enter state 68

	SelectEmptyQuerygoto state 67

State 49

	DeleteQuery -> delete graph_name where . FilterStart    (rule 26)

	not            shift, and enter state 65
	start          shift, and enter state 66

	FilterStart    goto state 64

State 50

	ComparisonOperation -> comp_operand SelectElementQuery . SelectElementQuery    (rule 31)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 63

State 51

	ArithmeticOperation -> arith_operand SelectElementQuery . SelectElementQuery    (rule 30)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 62

State 52

	GraphOperationSingle -> max SelectElementQuery .    (rule 37)

	save_to        reduce using rule 37


State 53

	GraphOperationSingle -> min SelectElementQuery .    (rule 36)

	save_to        reduce using rule 36


State 54

	GraphOperation -> difference SelectElementQuery . SelectElementQuery    (rule 34)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 61

State 55

	GraphOperation -> intersection SelectElementQuery . SelectElementQuery    (rule 33)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 60

State 56

	GraphOperation -> union SelectElementQuery . SelectElementQuery    (rule 32)

	select         shift, and enter state 11
	literal        shift, and enter state 17

	SelectElementQuerygoto state 59

State 57

	Line -> evaluate Operation save_to . file_name      (rule 2)

	file_name      shift, and enter state 58


State 58

	Line -> evaluate Operation save_to file_name .      (rule 2)

	%eof           reduce using rule 2


State 59

	GraphOperation -> union SelectElementQuery SelectElementQuery .    (rule 32)

	save_to        reduce using rule 32


State 60

	GraphOperation -> intersection SelectElementQuery SelectElementQuery .    (rule 33)

	save_to        reduce using rule 33


State 61

	GraphOperation -> difference SelectElementQuery SelectElementQuery .    (rule 34)

	save_to        reduce using rule 34


State 62

	ArithmeticOperation -> arith_operand SelectElementQuery SelectElementQuery .    (rule 30)

	save_to        reduce using rule 30


State 63

	ComparisonOperation -> comp_operand SelectElementQuery SelectElementQuery .    (rule 31)

	select_from    reduce using rule 31
	select         reduce using rule 31
	and            reduce using rule 31
	or             reduce using rule 31
	with           reduce using rule 31
	save_to        reduce using rule 31
	literal        reduce using rule 31


State 64

	DeleteQuery -> delete graph_name where FilterStart .    (rule 26)

	save_to        reduce using rule 26


State 65

	FilterStart -> not . Filter                         (rule 40)

	not            shift, and enter state 77
	comp_operand   shift, and enter state 31

	ComparisonOperationgoto state 75
	Filter         goto state 78

State 66

	FilterStart -> start . Filter and start FilterFinal    (rule 38)
	FilterStart -> start . Filter or start FilterFinal    (rule 39)

	not            shift, and enter state 77
	comp_operand   shift, and enter state 31

	ComparisonOperationgoto state 75
	Filter         goto state 76

State 67

	ReplaceQuery -> in graph_name replace SelectEmptyQuery . with element    (rule 22)
	ReplaceQuery -> in graph_name replace SelectEmptyQuery . with SelectObjectQuery    (rule 23)

	with           shift, and enter state 74


State 68

	SelectEmptyQuery -> select_from . graph_name        (rule 11)
	SelectEmptyQuery -> select_from . graph_name where FilterStart    (rule 12)

	graph_name     shift, and enter state 73


State 69

	AddQuery -> add branch to graph_name .              (rule 21)

	save_to        reduce using rule 21


State 70

	SelectElementQuery -> select Element from graph_name . where FilterStart    (rule 13)

	where          shift, and enter state 72


State 71

	SelectQuery -> select_from graph_name where FilterStart .    (rule 9)

	select_from    reduce using rule 9
	select         reduce using rule 9
	save_to        reduce using rule 9
	literal        reduce using rule 9


State 72

	SelectElementQuery -> select Element from graph_name where . FilterStart    (rule 13)

	not            shift, and enter state 65
	start          shift, and enter state 66

	FilterStart    goto state 88

State 73

	SelectEmptyQuery -> select_from graph_name .        (rule 11)
	SelectEmptyQuery -> select_from graph_name . where FilterStart    (rule 12)

	where          shift, and enter state 87
	with           reduce using rule 11


State 74

	ReplaceQuery -> in graph_name replace SelectEmptyQuery with . element    (rule 22)
	ReplaceQuery -> in graph_name replace SelectEmptyQuery with . SelectObjectQuery    (rule 23)

	select_object  shift, and enter state 85
	element        shift, and enter state 86

	SelectObjectQuerygoto state 84

State 75

	Filter -> ComparisonOperation .                     (rule 44)

	select_from    reduce using rule 44
	select         reduce using rule 44
	and            reduce using rule 44
	or             reduce using rule 44
	with           reduce using rule 44
	save_to        reduce using rule 44
	literal        reduce using rule 44


State 76

	FilterStart -> start Filter . and start FilterFinal    (rule 38)
	FilterStart -> start Filter . or start FilterFinal    (rule 39)
	Filter -> Filter . and FilterFinal                  (rule 41)
	Filter -> Filter . or FilterFinal                   (rule 42)

	and            shift, and enter state 82
	or             shift, and enter state 83


State 77

	Filter -> not . Filter                              (rule 43)

	not            shift, and enter state 77
	comp_operand   shift, and enter state 31

	ComparisonOperationgoto state 75
	Filter         goto state 81

State 78

	FilterStart -> not Filter .                         (rule 40)
	Filter -> Filter . and FilterFinal                  (rule 41)
	Filter -> Filter . or FilterFinal                   (rule 42)

	select_from    reduce using rule 40
	select         reduce using rule 40
	and            shift, and enter state 79
	or             shift, and enter state 80
	with           reduce using rule 40
	save_to        reduce using rule 40
	literal        reduce using rule 40


State 79

	Filter -> Filter and . FilterFinal                  (rule 41)

	comp_operand   shift, and enter state 31

	ComparisonOperationgoto state 91
	FilterFinal    goto state 94

State 80

	Filter -> Filter or . FilterFinal                   (rule 42)

	comp_operand   shift, and enter state 31

	ComparisonOperationgoto state 91
	FilterFinal    goto state 92

State 81

	Filter -> Filter . and FilterFinal                  (rule 41)
	Filter -> Filter . or FilterFinal                   (rule 42)
	Filter -> not Filter .                              (rule 43)

	select_from    reduce using rule 43
	select         reduce using rule 43
	and            shift, and enter state 79
	or             shift, and enter state 80
	with           reduce using rule 43
	save_to        reduce using rule 43
	literal        reduce using rule 43


State 82

	FilterStart -> start Filter and . start FilterFinal    (rule 38)
	Filter -> Filter and . FilterFinal                  (rule 41)

	start          shift, and enter state 95
	comp_operand   shift, and enter state 31

	ComparisonOperationgoto state 91
	FilterFinal    goto state 94

State 83

	FilterStart -> start Filter or . start FilterFinal    (rule 39)
	Filter -> Filter or . FilterFinal                   (rule 42)

	start          shift, and enter state 93
	comp_operand   shift, and enter state 31

	ComparisonOperationgoto state 91
	FilterFinal    goto state 92

State 84

	ReplaceQuery -> in graph_name replace SelectEmptyQuery with SelectObjectQuery .    (rule 23)

	save_to        reduce using rule 23


State 85

	SelectObjectQuery -> select_object . from graph_name where FilterStart    (rule 18)

	from           shift, and enter state 90


State 86

	ReplaceQuery -> in graph_name replace SelectEmptyQuery with element .    (rule 22)

	save_to        reduce using rule 22


State 87

	SelectEmptyQuery -> select_from graph_name where . FilterStart    (rule 12)

	not            shift, and enter state 65
	start          shift, and enter state 66

	FilterStart    goto state 89

State 88

	SelectElementQuery -> select Element from graph_name where FilterStart .    (rule 13)

	select_from    reduce using rule 13
	select         reduce using rule 13
	and            reduce using rule 13
	or             reduce using rule 13
	with           reduce using rule 13
	save_to        reduce using rule 13
	literal        reduce using rule 13


State 89

	SelectEmptyQuery -> select_from graph_name where FilterStart .    (rule 12)

	with           reduce using rule 12


State 90

	SelectObjectQuery -> select_object from . graph_name where FilterStart    (rule 18)

	graph_name     shift, and enter state 98


State 91

	FilterFinal -> ComparisonOperation .                (rule 45)

	select_from    reduce using rule 45
	select         reduce using rule 45
	and            reduce using rule 45
	or             reduce using rule 45
	with           reduce using rule 45
	save_to        reduce using rule 45
	literal        reduce using rule 45


State 92

	Filter -> Filter or FilterFinal .                   (rule 42)

	select_from    reduce using rule 42
	select         reduce using rule 42
	and            reduce using rule 42
	or             reduce using rule 42
	with           reduce using rule 42
	save_to        reduce using rule 42
	literal        reduce using rule 42


State 93

	FilterStart -> start Filter or start . FilterFinal    (rule 39)

	comp_operand   shift, and enter state 31

	ComparisonOperationgoto state 91
	FilterFinal    goto state 97

State 94

	Filter -> Filter and FilterFinal .                  (rule 41)

	select_from    reduce using rule 41
	select         reduce using rule 41
	and            reduce using rule 41
	or             reduce using rule 41
	with           reduce using rule 41
	save_to        reduce using rule 41
	literal        reduce using rule 41


State 95

	FilterStart -> start Filter and start . FilterFinal    (rule 38)

	comp_operand   shift, and enter state 31

	ComparisonOperationgoto state 91
	FilterFinal    goto state 96

State 96

	FilterStart -> start Filter and start FilterFinal .    (rule 38)

	select_from    reduce using rule 38
	select         reduce using rule 38
	and            reduce using rule 38
	or             reduce using rule 38
	with           reduce using rule 38
	save_to        reduce using rule 38
	literal        reduce using rule 38


State 97

	FilterStart -> start Filter or start FilterFinal .    (rule 39)

	select_from    reduce using rule 39
	select         reduce using rule 39
	and            reduce using rule 39
	or             reduce using rule 39
	with           reduce using rule 39
	save_to        reduce using rule 39
	literal        reduce using rule 39


State 98

	SelectObjectQuery -> select_object from graph_name . where FilterStart    (rule 18)

	where          shift, and enter state 99


State 99

	SelectObjectQuery -> select_object from graph_name where . FilterStart    (rule 18)

	not            shift, and enter state 65
	start          shift, and enter state 66

	FilterStart    goto state 100

State 100

	SelectObjectQuery -> select_object from graph_name where FilterStart .    (rule 18)

	save_to        reduce using rule 18


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 46
Number of terminals: 34
Number of non-terminals: 21
Number of states: 101
